[gd_scene load_steps=8 format=3 uid="uid://bgy35e8wwbsih"]

[ext_resource type="Script" path="res://Scripts/UI/Menu.gd" id="1_cv47j"]
[ext_resource type="Texture2D" uid="uid://d2wpbgfm6r41b" path="res://Sprites/UI/MainMenu.png" id="2_ppa1r"]
[ext_resource type="AudioStream" uid="uid://cvqdmjiyaheja" path="res://Sounds/Effects/Move.wav" id="4_n7i3j"]
[ext_resource type="AudioStream" uid="uid://cu1u5juuyoon1" path="res://Sounds/Effects/Enter.ogg" id="4_oya5l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_necrm"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a08rg"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqqfu"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[node name="Menu" type="CanvasLayer"]

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 240)

[node name="TextureRect" type="TextureRect" parent="Menu"]
texture_filter = 6
layout_mode = 0
offset_left = 256.0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("2_ppa1r")

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 480.0
color = Color(0.368627, 0.368627, 0.368627, 1)
script = ExtResource("1_cv47j")

[node name="NewGameButton" type="Button" parent="Menu/ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 64.0
offset_right = 248.0
offset_bottom = 128.0
focus_neighbor_top = NodePath("../LoadGameButton")
focus_neighbor_bottom = NodePath("../LoadGameButton")
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_necrm")
theme_override_styles/normal = SubResource("StyleBoxFlat_a08rg")
button_mask = 0
text = "New Game"
icon_alignment = 1

[node name="LoadGameButton" type="Button" parent="Menu/ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 152.0
offset_right = 248.0
offset_bottom = 216.0
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../NewGameButton")
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_necrm")
theme_override_styles/normal = SubResource("StyleBoxFlat_a08rg")
button_mask = 0
text = "Load Game
"
icon_alignment = 1

[node name="MoveSound" type="AudioStreamPlayer" parent="Menu/ColorRect"]
stream = ExtResource("4_n7i3j")
max_polyphony = 64

[node name="EnterSound" type="AudioStreamPlayer" parent="Menu/ColorRect"]
stream = ExtResource("4_oya5l")
max_polyphony = 64

[node name="Controls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 480.0

[node name="EnterKey" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 384.0
offset_right = 48.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_qqqfu")
text = "E"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="EnterHelp" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 0
offset_left = 56.0
offset_top = 384.0
offset_right = 152.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 25
text = "- Enter"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MoveKey" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 432.0
offset_right = 96.0
offset_bottom = 472.0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_qqqfu")
text = "WASD"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MoveHelp" type="Label" parent="Controls"]
texture_filter = 1
layout_mode = 0
offset_left = 104.0
offset_top = 432.0
offset_right = 200.0
offset_bottom = 472.0
theme_override_font_sizes/font_size = 25
text = "- Move"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="focus_entered" from="Menu/ColorRect/NewGameButton" to="Menu" method="_on_new_game_button_focus_entered"]
[connection signal="focus_entered" from="Menu/ColorRect/LoadGameButton" to="Menu" method="_on_load_game_button_focus_entered"]
